# OpenCV_Kinect_Matcher

./: CMakeLists.txt  CMakeLists.txt~  README.md
src/: connect_kinect.cpp  connect_kinect.cpp~
